--- a/pages/menuAyuda.html
+++ b/pages/menuAyuda.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="ayuda-container">
+    <img src="/img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Menú de Ayuda</h1>
     <ul>
       <li>Preguntas Frecuentes</li>
