--- a/pages/porcentajeAsistencia.html
+++ b/pages/porcentajeAsistencia.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="porcentaje-container">
+    <img src="/img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Porcentaje de Asistencia</h1>
     <ul>
       <li>Materia 1: 80%</li>
