--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="login-container">
+    <img src="./img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Iniciar Sesión</h1>
     <form>
       <input type="text" placeholder="Usuario" required>
