--- a/pages/controlRegularidad.html
+++ b/pages/controlRegularidad.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="regularidad-container">
+    <img src="/img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Control de Regularidad</h1>
     <ul>
       <li>Alumno 1: Regular</li>
