--- a/pages/selecciónCatedra.html
+++ b/pages/selecciónCatedra.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="catedra-container">
+    <img src="/img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Selecciona una Cátedra</h1>
     <ul>
       <li>Cátedra 1</li>
