--- a/pages/tomaAsistencia.html
+++ b/pages/tomaAsistencia.html
@@ -11,6 +11,7 @@
 
 <body>
   <div class="asistencia-container">
+    <img src="/img/DS.jpg" alt="logoUrquiza" style="width: 550px; height: 150px;">
     <h1>Toma de Asistencia</h1>
     <ul>
       <li>Alumno 1: <input type="checkbox"></li>
